fix(DrawerList): use overflow hidden instead of clip-path for arrow --run-all (#7668)
Or https://github.com/dnbexperience/eufemia/pull/7658

Will have to test both approaches

--- a/packages/dnb-eufemia/src/fragments/drawer-list/style/dnb-drawer-list.scss
+++ b/packages/dnb-eufemia/src/fragments/drawer-list/style/dnb-drawer-list.scss
@@ -303,6 +303,7 @@
     height: calc(var(--drawer-list-height) / 2);
 
     z-index: -1;
+    overflow: hidden;
 
     &::before {
       content: '';
